@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2016, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -58,10 +58,10 @@ public class T6403466 extends AbstractProcessor {
                 fm.getJavaFileObjectsFromFiles(Arrays.asList(new File(testSrcDir, self + ".java")));
 
             Iterable<String> options = Arrays.asList(
-                "-XaddExports:"
-                    + "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED,"
+                "--add-exports",
+                    "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED,"
                     + "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-                "-processorpath", testClassDir,
+                "--processor-path", testClassDir,
                 "-processor", self,
                 "-s", ".",
                 "-d", ".");
