@@ -73,7 +73,7 @@ public class EdgeCases extends ModuleTestBase {
         tb.createDirectories(classes);
 
         List<String> log = new JavacTask(tb)
-                .options("-XaddExports:undef/undef=ALL-UNNAMED", "-XDrawDiagnostics")
+                .options("--add-exports", "undef/undef=ALL-UNNAMED", "-XDrawDiagnostics")
                 .outdir(classes)
                 .files(findJavaFiles(src))
                 .run(Task.Expect.FAIL)
@@ -167,7 +167,7 @@ public class EdgeCases extends ModuleTestBase {
 
         String log = new JavacTask(tb)
                 .options("-XDrawDiagnostics",
-                         "-modulesourcepath", src.toString())
+                         "--module-source-path", src.toString())
                 .outdir(classes)
                 .files(findJavaFiles(src))
                 .run(Task.Expect.FAIL)
@@ -222,16 +222,16 @@ public class EdgeCases extends ModuleTestBase {
         tb.createDirectories(classes);
 
         new JavacTask(tb)
-                .options("-modulepath", modulePath.toString(),
-                         "-modulesourcepath", src.toString())
+                .options("--module-path", modulePath.toString(),
+                         "--module-source-path", src.toString())
                 .outdir(classes)
                 .files(findJavaFiles(src_m2))
                 .run()
                 .writeAll();
 
         new JavacTask(tb)
-                .options("-modulepath", modulePath.toString(),
-                         "-modulesourcepath", src.toString())
+                .options("--module-path", modulePath.toString(),
+                         "--module-source-path", src.toString())
                 .outdir(classes)
                 .files(findJavaFiles(src_m3))
                 .run()
@@ -250,7 +250,7 @@ public class EdgeCases extends ModuleTestBase {
         tb.createDirectories(classes);
 
         new JavacTask(tb)
-                .options("-sourcepath", src_m1.toString(),
+                .options("--source-path", src_m1.toString(),
                          "-XDrawDiagnostics")
                 .outdir(classes)
                 .files(findJavaFiles(src_m1.resolve("test")))
@@ -261,7 +261,7 @@ public class EdgeCases extends ModuleTestBase {
                           "module m1 {}");
 
         new JavacTask(tb)
-                .options("-sourcepath", src_m1.toString())
+                .options("--source-path", src_m1.toString())
                 .outdir(classes)
                 .files(findJavaFiles(src_m1.resolve("test")))
                 .run()
@@ -286,7 +286,7 @@ public class EdgeCases extends ModuleTestBase {
         tb.createDirectories(classes);
 
         List<String> log = new JavacTask(tb)
-                .options("-modulesourcepath", src.toString(),
+                .options("--module-source-path", src.toString(),
                          "-XDrawDiagnostics")
                 .outdir(classes)
                 .files(findJavaFiles(src))
